== Version ?.?.? (tzdata v2008b) - ???????????

* Updated to tzdata version 2008b
  (http://article.gmane.org/gmane.comp.time.tz/2149).


== Version 0.3.7 (tzdata v2008a) - 10-Mar-2008

* Updated to tzdata version 2008a
  (http://article.gmane.org/gmane.comp.time.tz/2071).


== Version 0.3.6 (tzdata v2007k) - 1-Jan-2008

* Updated to tzdata version 2007k
  (http://article.gmane.org/gmane.comp.time.tz/2029).
* Removed deprecated RubyGems autorequire option.


== Version 0.3.5 (tzdata v2007h) - 1-Oct-2007

* Updated to tzdata version 2007h
  (http://article.gmane.org/gmane.comp.time.tz/1878).


== Version 0.3.4 (tzdata v2007g) - 21-Aug-2007

* Updated to tzdata version 2007g
  (http://article.gmane.org/gmane.comp.time.tz/1810).


== Version 0.3.3 (tzdata v2006p) - 27-Nov-2006

* Updated to tzdata version 2006p
  (http://article.gmane.org/gmane.comp.time.tz/1358).


== Version 0.3.2 (tzdata v2006n) - 11-Oct-2006

* Updated to tzdata version 2006n
  (http://article.gmane.org/gmane.comp.time.tz/1288). Note that this release of
  tzdata removes the country Serbia and Montenegro (CS) and replaces it with
  separate Serbia (RS) and Montenegro (ME) entries.


== Version 0.3.1 (tzdata v2006j) - 21-Aug-2006

* Remove colon from case statements to avoid warning in Ruby 1.8.5. #5198.
* Use temporary variable to avoid dynamic string warning from rdoc.
* Updated to tzdata version 2006j
  (http://article.gmane.org/gmane.comp.time.tz/1175).


== Version 0.3.0 (tzdata v2006g) - 17-Jul-2006

* New timezone data format. Timezone data now occupies less space on disk and
  takes less memory once loaded. #4142, #4144.
* Timezone data is defined in modules rather than classes. Timezone instances 
  returned by Timezone.get are no longer instances of data classes, but are
  instead instances of new DataTimezone and LinkedTimezone classes.
* Timezone instances can now be used with Marshal.dump and Marshal.load. #4240.